--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -58,6 +58,12 @@
 			<version>2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>javax.transaction-api</artifactId>
+			<version>1.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
