--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,8 @@
 image:
     file: .gitpod.Dockerfile
+tasks:
+    - name: Compile Backend
+      command: mvn clean package
+    - name: Build Docker Project
+      command: docker-compose up -d
+    
