--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,5 +4,5 @@ tasks:
     - name: Compile Backend
       command: mvn clean package
     - name: Build Docker Project
-      command: docker-compose up -d
+      command: docker-compose up --build
     
