--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "axios": "^1.5.1",
     "jest": "29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.5.0"
   },
@@ -45,7 +47,10 @@
       "^.+\\.jsx?$": "babel-jest"
     },
     "testEnvironment": "node",
-    "moduleFileExtensions": ["js", "jsx"],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
     "moduleNameMapper": {
       "\\.(css|less|scss|sass)$": "identity-obj-proxy"
     }
