--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "axios": "^1.5.1",
+    "env-cmd": "^10.1.0",
     "jest": "29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-scripts": "^5.0.1",
+    "svgo": "^3.0.2",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f ./.env.production.local react-scripts start",
     "build": "react-scripts build",
+    "build:local": "env-cmd -f ./.env.production.local npm run build",
+    "build:production": "env-cmd -f ./.env.production npm run build",
     "eject": "react-scripts eject",
     "test": "jest"
   },
