--- a/backend/database/Dockerfile
+++ b/backend/database/Dockerfile
@@ -7,5 +7,6 @@ ENV POSTGRES_DB todolist
 EXPOSE 5432
 
 COPY schema.sql /docker-entrypoint-initdb.d/
+COPY dummydata.sql /docker-entrypoint-initdb.d/
 
 CMD ["postgres"]
