--- a/backend/database/Dockerfile
+++ b/backend/database/Dockerfile
@@ -1,11 +1,5 @@
 FROM postgres:alpine3.18
 
-ENV POSTGRES_USER robert
-ENV POSTGRES_PASSWORD securepassword
-ENV POSTGRES_DB todolist
-
-EXPOSE 5432
-
-COPY schema.sql /docker-entrypoint-initdb.d/
+COPY init.sql /docker-entrypoint-initdb.d/
 
 CMD ["postgres"]
