--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "jest": "29.7.0",
     "react": "^18.2.0",
