--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,3 +8,5 @@ tasks:
       docker-compose up -d
       npm install -g npm@10.2.1
       npm install --global yarn
+      cd frontend/
+      npm install
