--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=securepassword
 # JPA/Hibernate specific settings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Spring Boot specific settings
+security.basic.enable: false
+security.ignored=/**
