--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -1,6 +1,9 @@
+name: Run Docker Compose
+on: push
+
 steps:
   # need checkout before using compose-action
   - uses: actions/checkout@v3
   - uses: isbang/compose-action@v1.5.1
     with:
-      compose-file: "./docker/docker-compose.yml"
+      compose-file: "docker-compose.yml"
