--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,24 @@ on:
       - dev
 
 jobs:
-  test-http:
-    runs-on: ubuntu-20.04
+
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out code 🛎
-        uses: actions/checkout@v2
-        
-      - name: Run docker-compose
-        run: docker-compose up -d
+    
+    - uses: actions/checkout@v2
+    
+    - name: Build with Maven
+      working-directory: ./backend
+      run: mvn clean install
+      
+  deploy:
+    needs: build 
+    runs-on: ubuntu-latest
+    
+    steps:
+    
+    - uses: actions/checkout@v2
+    
+    - name: Deploy with docker-compose
+      run: docker-compose up -d
