--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    
+    - name: Check out code 🛎
     - uses: actions/checkout@v2
     
-    - name: Build with Maven
+    - name: Build using Maven
       working-directory: ./backend
       run: mvn clean install
       
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    
+    - name: Check out code 🛎
     - uses: actions/checkout@v2
     
     - name: Deploy with docker-compose
