--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,11 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U robert"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
     networks:
       - todolist-network
@@ -49,6 +54,14 @@ services:
     restart: unless-stopped
     networks:
       - todolist-network
+
+  jaeger-all-in-one:
+    image: jaegertracing/all-in-one:latest
+    restart: always
+    ports:
+      - "16686:16686"
+      - "14268"
+      - "14250"
 
 networks:
   todolist-network:
