--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,9 @@ RUN npm install
 
 COPY . .
 
+ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar .
+ENV JAVA_TOOL_OPTIONS "-javaagent:./opentelemetry-javaagent.jar"
+
 RUN npm run build:production
 
 CMD ["npm", "run", "start:production"]
