--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,10 @@
+# Build stage
+FROM maven:3.8.5-openjdk-17-slim as build
+WORKDIR /app
+COPY . .
+RUN mvn clean package
+
+# Run stage
 FROM openjdk:17-jdk-slim
 
 ARG JAR_FILE=target/*.jar
