--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,7 @@ RUN mvn clean package
 # Run stage
 FROM openjdk:17-jdk-slim
 
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
+COPY --from=build /app/target/*.jar app.jar
 
 ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar .
 ENV JAVA_TOOL_OPTIONS "-javaagent:./opentelemetry-javaagent.jar"
