--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - dev
-  pull_request:
-    branches:
       - main
+    tags:
+      - "v*.*.*"
 
 jobs:
   build-backend:
@@ -18,8 +18,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3.13.0
         with:
-          distribution: 'adopt'
-          java-version: '17'
+          distribution: "adopt"
+          java-version: "17"
 
       - name: Cache Maven dependencies
         uses: actions/cache@v3.3.2
@@ -57,40 +57,50 @@ jobs:
           npm run test
           npm run build
 
-  deploy:
+  package-artifacts:
     needs: [build-backend, build-frontend]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3.13.0
-        with:
-          distribution: "adopt"
-          java-version: "17"
-          
-      - name: Build Backend
-        working-directory: ./backend
-        run: mvn clean install
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4.0.0
-        with:
-          node-version: 18
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v3.3.2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node
-
-      - name: Build Frontend
-        working-directory: ./frontend
+      - name: Bump version and push tag
+        id: tag_version
         run: |
-          npm install
-          npm run build
+          git config --global user.email "fesko.robert@gmail.com"
+          git config --global user.name "robertfeo"
+          git fetch --tags
+          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+          echo "Latest tag: $latest_tag"
+          new_tag="v$(echo $latest_tag | sed -E 's/v([0-9]+)\.([0-9]+)\.([0-9]+)/echo \1.\2.$((\3+1))/e')"
+          echo "New tag: $new_tag"
+          git tag $new_tag
+          git push origin $new_tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract tag name
+        id: get_tag
+        run: echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
+        shell: bash
+      - name: Build Docker image for backend
+        run: |
+          docker build -t ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-backend:${{ steps.tag_version.outputs.new_tag }} ./backend
+      - name: Build Docker image for frontend
+        run: |
+          docker build -t ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-frontend:${{ steps.tag_version.outputs.new_tag }} ./frontend
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+      - name: Push Docker images
+        run: |
+          docker push ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-backend:${{ steps.get_tag.outputs.tag }}
+          docker push ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-frontend:${{ steps.get_tag.outputs.tag }}
 
-      - name: Deploy with docker-compose
-        run: docker-compose up -d
+#  deploy:
+#    needs: [package-artifacts]
+#    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Deploy with docker-compose
+#        run: docker-compose up -d
