--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -83,19 +83,19 @@ jobs:
         shell: bash
       - name: Build Docker image for backend
         run: |
-          docker build -t ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-backend:${{ steps.tag_version.outputs.new_tag }} ./backend
+          docker build -t rofeit00/todo-backend:${{ steps.tag_version.outputs.new_tag }} ./backend
       - name: Build Docker image for frontend
         run: |
-          docker build -t ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-frontend:${{ steps.tag_version.outputs.new_tag }} ./frontend
+          docker build -t rofeit00/todo-frontend:${{ steps.tag_version.outputs.new_tag }} ./frontend
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          username: rofeit00
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
       - name: Push Docker images
         run: |
-          docker push ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-backend:${{ steps.get_tag.outputs.tag }}
-          docker push ${{ secrets.DOCKER_REGISTRY_USERNAME }}/todo-frontend:${{ steps.get_tag.outputs.tag }}
+          docker push rofeit00/todo-backend:${{ steps.get_tag.outputs.tag }}
+          docker push rofeit00/todo-frontend:${{ steps.get_tag.outputs.tag }}
 
 #  deploy:
 #    needs: [package-artifacts]
