--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,40 +63,49 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Bump version and push tag
-        id: tag_version
-        run: |
-          git config --global user.email "fesko.robert@gmail.com"
-          git config --global user.name "robertfeo"
-          git fetch --tags
-          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
-          echo "Latest tag: $latest_tag"
-          new_tag="v$(echo $latest_tag | sed -E 's/v([0-9]+)\.([0-9]+)\.([0-9]+)/echo \1.\2.$((\3+1))/e')"
-          echo "New tag: $new_tag"
-          git tag $new_tag
-          git push origin $new_tag
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract tag name
-        id: get_tag
-        run: echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
-        shell: bash
-      - name: Build Docker image for backend
-        run: |
-          echo "Tag to be used: ${{ steps.tag_version.outputs.new_tag }}"
-          docker build -t rofeit00/todo-backend:${{ steps.tag_version.outputs.new_tag }} ./backend
-      - name: Build Docker image for frontend
-        run: |
-          docker build -t rofeit00/todo-frontend:${{ steps.tag_version.outputs.new_tag }} ./frontend
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Bump version
+        uses: actions/github-script@v6
+        if: startsWith(github.ref, 'refs/tags/') == false
         with:
-          username: rofeit00
-          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-      - name: Push Docker images
-        run: |
-          docker push rofeit00/todo-backend:${{ steps.get_tag.outputs.tag }}
-          docker push rofeit00/todo-frontend:${{ steps.get_tag.outputs.tag }}
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            let version = '0.0.1';
+            const latestTag = await github.repos.getLatestRelease().then(release => release.tag_name || '0.0.0');
+            if (latestTag != '0.0.0') {
+              const [major, minor, patch] = latestTag.split('.'); 
+              version = `${major}.${minor}.${parseInt(patch) + 1}`;  
+            }
+            const newTag = `v${version}`;
+            github.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/tags/${newTag}`,
+              sha: context.sha  
+            });
+      - uses: docker/build-push-action@v3
+        with:
+          push: ${{ startsWith(github.ref, 'refs/tags/') }}
+          tags: |
+            rofeit00/todo-backend:${{ env.VERSION }}
+            rofeit00/todo-frontend:${{ env.VERSION }}
+        env:
+          VERSION: ${{ github.ref == 'refs/tags/v*.*.*' && github.ref || github.run_id }}
+
+#      - name: Build Docker image for backend
+#        run: |
+#          docker build -t rofeit00/todo-backend:${{ steps.tag_version.outputs.new_tag }} ./backend
+#      - name: Build Docker image for frontend
+#        run: |
+#          docker build -t rofeit00/todo-frontend:${{ steps.tag_version.outputs.new_tag }} ./frontend
+#      - name: Log in to Docker Hub
+#        uses: docker/login-action@v1
+#        with:
+#          username: rofeit00
+#          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+#      - name: Push Docker images
+#        run: |
+#          docker push rofeit00/todo-backend:${{ steps.get_tag.outputs.tag }}
+#          docker push rofeit00/todo-frontend:${{ steps.get_tag.outputs.tag }}
 
 #  deploy:
 #    needs: [package-artifacts]
