--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,19 +72,19 @@ jobs:
             let version = '0.0.1';
             let latestRelease = await github.repos.getLatestRelease();
             let latestTag = '0.0.0';
-            if (latestRelease) {
-              latestTag = latestRelease.tag_name;  
-            }
+            if (latestRelease != undefined) {
+              latestTag = latestRelease.tag_name;
+            }  
             if (latestTag != '0.0.0') {
               const [major, minor, patch] = latestTag.split('.');
               version = `${major}.${minor}.${parseInt(patch) + 1}`;
             }
             const newTag = `v${version}`;
             github.git.createRef({
-              owner: context.repo.owner, 
-              repo: context.repo.repo,
+              owner: context.repo.owner,
+              repo: context.repo.repo, 
               ref: `refs/tags/${newTag}`,
-              sha: context.sha
+              sha: context.sha  
             });
       - uses: docker/build-push-action@v3
         with:
