--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,24 +67,35 @@ jobs:
         uses: actions/github-script@v6
         if: startsWith(github.ref, 'refs/tags/') == false
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const octokit = github.getOctokit(process.env.GITHUB_TOKEN);
+            let latestRelease;
+            try {
+              latestRelease = await octokit.repos.getLatestRelease({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+              });
+            } catch (error) {
+              if (error.status !== 404) {
+                throw error;
+              }
+              // Handle the case where there is no latest release
+              console.log('No latest release found');
+            }
             let version = '0.0.1';
-            let latestRelease = await github.repos.getLatestRelease();
-            let latestTag = '0.0.0';
-            if (latestRelease != undefined) {
-              latestTag = latestRelease.tag_name;
-            }  
-            if (latestTag != '0.0.0') {
-              const [major, minor, patch] = latestTag.split('.');
-              version = `${major}.${minor}.${parseInt(patch) + 1}`;
+            if (latestRelease && latestRelease.data.tag_name) {
+              const latestTag = latestRelease.data.tag_name;
+              const [major, minor, patch] = latestTag.split('.').map(num => parseInt(num, 10));
+              version = `${major}.${minor}.${patch + 1}`;
             }
             const newTag = `v${version}`;
-            github.git.createRef({
+            console.log(`New tag: ${newTag}`);
+            await octokit.git.createRef({
               owner: context.repo.owner,
-              repo: context.repo.repo, 
+              repo: context.repo.repo,
               ref: `refs/tags/${newTag}`,
-              sha: context.sha  
+              sha: context.sha
             });
       - uses: docker/build-push-action@v3
         with:
