--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,8 +5,9 @@ on:
     branches:
       - dev
       - main
-    tags:
-      - "v*.*.*"
+    tags: [ 'v*.*.*' ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build-backend:
@@ -63,7 +64,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Bump version
+      - name: Bump version and create a tag if necessary
+        id: bump_version
         uses: actions/github-script@v6
         if: startsWith(github.ref, 'refs/tags/') == false
         with:
@@ -80,31 +82,38 @@ jobs:
               if (error.status !== 404) {
                 throw error;
               }
-              // Handle the case where there is no latest release
               console.log('No latest release found');
             }
+  
             let version = '0.0.1';
             if (latestRelease && latestRelease.data.tag_name) {
               const latestTag = latestRelease.data.tag_name;
-              const [major, minor, patch] = latestTag.split('.').map(num => parseInt(num, 10));
+              const [major, minor, patch] = latestTag.slice(1).split('.').map(num => parseInt(num, 10));
               version = `${major}.${minor}.${patch + 1}`;
             }
             const newTag = `v${version}`;
             console.log(`New tag: ${newTag}`);
-            await octokit.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `refs/tags/${newTag}`,
-              sha: context.sha
-            });
-      - uses: docker/build-push-action@v3
+            
+            if (latestRelease.data.tag_name !== newTag) {
+              await octokit.git.createRef({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                ref: `refs/tags/${newTag}`,
+                sha: context.sha
+              });
+              return newTag;
+            } else {
+              return '';
+            }
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
         with:
-          push: ${{ startsWith(github.ref, 'refs/tags/') }}
+          push: ${{ steps.bump_version.outputs.result != '' }}
           tags: |
             rofeit00/todo-backend:${{ env.VERSION }}
             rofeit00/todo-frontend:${{ env.VERSION }}
         env:
-          VERSION: ${{ github.ref == 'refs/tags/v*.*.*' && github.ref || github.run_id }}
+          VERSION: ${{ github.ref == 'refs/tags/v*.*.*' && github.ref || github.run_id }}          
 
 #      - name: Build Docker image for backend
 #        run: |
