--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - dev
       - main
-    tags: [ 'v*.*.*' ]
+    tags: ["v*.*.*"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build-backend:
@@ -29,7 +29,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build and Test Backend
+      - name: Build Backend
         working-directory: ./backend
         run: mvn clean install
 
@@ -58,84 +58,44 @@ jobs:
           npm run test
           npm run build
 
-  package-artifacts:
+  docker:
     needs: [build-backend, build-frontend]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - name: Bump version and create a tag if necessary
-        id: bump_version
-        uses: actions/github-script@v6
-        if: startsWith(github.ref, 'refs/tags/') == false
+      - name: Docker meta for backend
+        id: meta_backend
+        uses: docker/metadata-action@v5
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { Octokit } = require("@octokit/core");
-            const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
-            let latestRelease;
-            try {
-              latestRelease = await octokit.repos.getLatestRelease({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-              });
-            } catch (error) {
-              if (error.status !== 404) {
-                throw error;
-              }
-              console.log('No latest release found');
-            }
-  
-            let version = '0.0.1';
-            if (latestRelease && latestRelease.data.tag_name) {
-              const latestTag = latestRelease.data.tag_name;
-              const [major, minor, patch] = latestTag.slice(1).split('.').map(num => parseInt(num, 10));
-              version = `${major}.${minor}.${patch + 1}`;
-            }
-            const newTag = `v${version}`;
-            console.log(`New tag: ${newTag}`);
-            
-            if (latestRelease.data.tag_name !== newTag) {
-              await octokit.git.createRef({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                ref: `refs/tags/${newTag}`,
-                sha: context.sha
-              });
-              return newTag;
-            } else {
-              return '';
-            }
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          push: ${{ steps.bump_version.outputs.result != '' }}
+          images: |
+            rofeit00/todo-backend
           tags: |
-            rofeit00/todo-backend:${{ env.VERSION }}
-            rofeit00/todo-frontend:${{ env.VERSION }}
-        env:
-          VERSION: ${{ github.ref == 'refs/tags/v*.*.*' && github.ref || github.run_id }}          
-
-#      - name: Build Docker image for backend
-#        run: |
-#          docker build -t rofeit00/todo-backend:${{ steps.tag_version.outputs.new_tag }} ./backend
-#      - name: Build Docker image for frontend
-#        run: |
-#          docker build -t rofeit00/todo-frontend:${{ steps.tag_version.outputs.new_tag }} ./frontend
-#      - name: Log in to Docker Hub
-#        uses: docker/login-action@v1
-#        with:
-#          username: rofeit00
-#          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-#      - name: Push Docker images
-#        run: |
-#          docker push rofeit00/todo-backend:${{ steps.get_tag.outputs.tag }}
-#          docker push rofeit00/todo-frontend:${{ steps.get_tag.outputs.tag }}
-
-#  deploy:
-#    needs: [package-artifacts]
-#    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Deploy with docker-compose
-#        run: docker-compose up -d
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+      - name: Docker meta for frontend
+        id: meta_frontend
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            rofeit00/todo-frontend
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+      - name: Login to DockerHub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
