--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,9 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - dev
       - main
-    tags: ["v*.*.*"]
+      - dev
+    tags:
+      - 'v*'
   pull_request:
     branches: ["main"]
 
@@ -15,20 +16,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Setup Java
         uses: actions/setup-java@v3.13.0
         with:
           distribution: "adopt"
           java-version: "17"
-
       - name: Cache Maven dependencies
         uses: actions/cache@v3.3.2
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-
       - name: Build Backend
         working-directory: ./backend
         run: mvn clean install
@@ -38,19 +36,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4.0.0
         with:
           node-version: 18
-
       - name: Cache Node.js modules
         uses: actions/cache@v3.3.2
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node
-
       - name: Build and Test Frontend
         working-directory: ./frontend
         run: |
@@ -74,7 +69,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=semver,pattern={{major}}.{{minor}}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -85,17 +80,20 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=semver,pattern={{major}}.{{minor}}
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-      - name: Build and push
+      - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta_backend.outputs.tags }}
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          tags: ${{ steps.meta_frontend.outputs.tags }}
