--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,17 +56,22 @@ jobs:
   publish:
     needs: [build-backend, build-frontend]
     runs-on: ubuntu-latest
+    env:
+      BASE_SEMANTIC_VERSION: ''
     steps:
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get base semantic version
+        id: base_semantic_version
+        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV        
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
-          tag: ${{ steps.tag_version.outputs.new_version }}
-          name: Release ${{ steps.tag_version.outputs.new_version }}
+          tag: ${{ env.BASE_SEMANTIC_VERSION }}
+          name: Release ${{ env.BASE_SEMANTIC_VERSION }}
       - name: Checkout
         uses: actions/checkout@v4
       - name: Login to Docker Hub
@@ -82,7 +87,7 @@ jobs:
           images: |
             rofeit00/todo-backend
           tags: |
-            type=raw,value=${{ steps.tag_version.outputs.new_version }}
+            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
       - name: Docker meta for frontend
@@ -92,7 +97,7 @@ jobs:
           images: |
             rofeit00/todo-frontend
           tags: |
-            type=raw,value=${{ steps.tag_version.outputs.new_version }}
+            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
       - name: Build and push backend
