--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,6 +64,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_release_rules: 'hotfix:patch:Bug Fixes,feat:minor:Features,fix:patch:Bug Fixes,breaking:major:Breaking Changes'
       - name: Get base semantic version
         id: base_semantic_version
         run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV        
@@ -89,7 +90,7 @@ jobs:
           tags: |
             type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -99,7 +100,7 @@ jobs:
           tags: |
             type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
