--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,7 +64,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_release_rules: 'hotfix:patch:Bug Fixes,feat:minor:Features,fix:patch:Bug Fixes,breaking:major:Breaking Changes'
+          custom_release_rules: 'hotfix:patch,feat:minor,fix:patch,breaking:major'
       - name: Get base semantic version
         id: base_semantic_version
         run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV        
