--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,10 +70,8 @@ jobs:
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1.13.0
         with:
-          #tag: ${{ env.BASE_SEMANTIC_VERSION }}
-          #name: Release ${{ env.BASE_SEMANTIC_VERSION }}
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          tag: ${{ env.BASE_SEMANTIC_VERSION }}
+          name: Release ${{ env.BASE_SEMANTIC_VERSION }}
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -87,9 +85,9 @@ jobs:
           images: |
             rofeit00/todo-backend
           tags: |
-            
-            type=pep440,pattern={{version}}
+            type=raw, value=${{ env.BASE_SEMANTIC_VERSION }}
             type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
+#            type=pep440,pattern={{version}}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -97,7 +95,7 @@ jobs:
           images: |
             rofeit00/todo-frontend
           tags: |
-            type=pep440,pattern={{version}}
+            type=raw, value=${{ env.BASE_SEMANTIC_VERSION }}
             type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Build and push backend
         uses: docker/build-push-action@v5
@@ -105,7 +103,7 @@ jobs:
           context: ./backend
           push: true
           tags: |
-            ${{ steps.tag_version.outputs.new_version }}
+            ${{ env.BASE_SEMANTIC_VERSION }}
             latest
       - name: Build and push frontend
         uses: docker/build-push-action@v5
@@ -113,5 +111,5 @@ jobs:
           context: ./frontend
           push: true
           tags: |
-            ${{ steps.tag_version.outputs.new_version }}
+            ${{ env.BASE_SEMANTIC_VERSION }}
             latest
