update frontend test pipeline

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,5 +8,6 @@ tasks:
       npm install -g npm@10.2.1
       cd frontend/
       npm install --silent
+      npm run build
       cd ..
       docker-compose up -d
