--- a/.github/workflows/sonarbuild.yml
+++ b/.github/workflows/sonarbuild.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - dev
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - main
 
 jobs:
   build:
